# siricon

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFESTO.md  Makefile  NODES.md  README.md  pyproject.toml
benchmarks/: vs_qiskit_aer.py
examples/: barren_plateau.py  circuit_cutting.py  network_submit.py  vqa_optimization.py
scripts/: guard.py  setup.sh
src/siricon/: __init__.py  batch_distributor.py  circuit.py  cli.py  client.py  coordinator.py  density_matrix.py  gates.py  landscape.py  node.py  qasm_bridge.py  registry.py  registry_server.py  server.py  simulator.py  verification.py
src/zilver/: __init__.py  batch_distributor.py  circuit.py  cli.py  client.py  coordinator.py  cutting.py  density_matrix.py  gates.py  gradients.py  landscape.py  node.py  qasm_bridge.py  registry.py  registry_server.py  security.py  server.py  simulator.py  tensor_network.py  verification.py
tests/: test_batch_distributor.py  test_circuit.py  test_client.py  test_coordinator.py  test_cutting.py  test_density_matrix.py  test_gates.py  test_gradients.py  test_landscape.py  test_new_gates.py  test_node.py  test_registry.py  test_registry_server.py  test_server.py  test_simulator.py  test_tensor_network.py  test_verification.py
