[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "siricon"
version = "0.1.0"
description = "MLX-native statevector quantum circuit simulator for Apple Silicon"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["quantum computing", "simulation", "apple silicon", "mlx", "barren plateau", "variational quantum algorithms"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mlx>=0.18.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-benchmark>=4.0"]
qiskit = ["qiskit-aer>=0.12", "qiskit>=0.45"]

[tool.hatch.build.targets.wheel]
packages = ["src/siricon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
